--- a/amis/services/fk-cloud-service/Dockerfile
+++ b/amis/services/fk-cloud-service/Dockerfile
@@ -6,10 +6,8 @@ ADD ./service-envoy.yaml /etc/service-envoy.yaml
 ADD ./startup.sh /usr/local/bin/startup.sh
 RUN chmod u+x /usr/local/bin/startup.sh
 
-RUN mkdir -p /app/api
-RUN mkdir -p /app/portal
-RUN mkdir -p /app/ocr-portal
-RUN mkdir -p /app/legacy
+RUN mkdir -p /app/api /app/portal /app/ocr-portal /app/legacy
+RUN mkdir -p /etc/ssl/certs/
 
 COPY --from=fk /ingester /app
 COPY --from=fk /server /app
@@ -17,5 +15,6 @@ COPY --from=fk /api /app/api
 COPY --from=fk /portal/ /app/portal
 COPY --from=fk /ocr-portal /app/ocr-portal
 COPY --from=fk /legacy /app/legacy
+COPY --from=fk /ca-certificates.crt /etc/ssl/certs
 
 ENTRYPOINT /usr/local/bin/startup.sh
