Use hardcoded address in URL for now.

--- a/amis/Makefile
+++ b/amis/Makefile
@@ -60,14 +60,15 @@ clean:
 
 tools: .bin/yq
 
+.bin/yq:
+	mkdir -p .bin
+	wget https://github.com/mikefarah/yq/releases/download/3.1.1/yq_linux_amd64 -O .bin/yq
+	chmod 755 .bin/yq
+
 fk-cloud-stack-run: tools images
 	mkdir -p build
 	.bin/yq d stacks/fk-cloud-stack/docker-compose.yaml "services.*.logging" > build/docker-compose.yaml
 	cp 99_local.env build
 	cat build/*_*.env > build/.env
-	cd build && docker-compose up
-
-.bin/yq:
-	mkdir -p .bin
-	wget https://github.com/mikefarah/yq/releases/download/3.1.1/yq_linux_amd64 -O .bin/yq
-	chmod 755 .bin/yq
+	cd build && docker-compose rm -f
+	cd build && docker-compose up || true
