New Makefile with better dependency handling.

--- a/amis/Makefile
+++ b/amis/Makefile
@@ -1,20 +1,42 @@
 
 STACKS ?= dummy-stack fk-cloud-stack
 IMAGES ?= dummy-proxy dummy-service fk-cloud-proxy fk-cloud-service
+TAG ?= $(shell date "+%Y%m%d-%H%M%S")
 
 # NOTE: This fails miserably with spaces.
 BUILD := $(abspath build)
-TAG := $(shell date "+%Y%m%d-%H%M%S")
-
-# Paths to the exported docker images.
-IMAGE_BUILD_TARGETS = ${IMAGES:%=${BUILD}/%.di}
-
-# Paths to the archived stacks.
-STACK_BUILD_TARGETS = $(STACKS:%=$(BUILD)/%.tar)
+DEPDIR := $(abspath .deps)
 
 default: stacks
 
-stacks: images $(STACK_BUILD_TARGETS)
+$(DEPDIR)/rules.mk: Makefile
+	@rm -rf $(DEPDIR)
+	@mkdir -p $(DEPDIR)
+	@for s in services/*; do                                                        \
+		service_name=`basename $$s`                           	                   ;\
+		echo ".PHONY: $$service_name" >> $@                   	                   ;\
+		for f in $$s/*; do                                                          \
+			if [ -f $$f ]; then                                                     \
+				echo $$service_name: including $$f                                 ;\
+				echo "$(BUILD)/$$service_name.di: $$f" >> $@                       ;\
+			fi                                                                      \
+		done                                                                        \
+	done
+	@for s in stacks/*; do                                                          \
+		stack_name=`basename $$s`                                                  ;\
+		echo ".PHONY: $$stack_name" >> $@                                          ;\
+		echo "$$stack_name: $$s/docker-compose.yaml" >> $@                         ;\
+		echo "$$stack_name: $(BUILD)/$$stack_name.tar" >> $@                       ;\
+		for f in $$s/*; do                                                          \
+			if [ -d $$f ]; then                                                     \
+				service_name=`basename $$f`                                        ;\
+				echo $$stack_name: including $$service_name                        ;\
+				echo "$(BUILD)/$$stack_name.tar: $(BUILD)/$$service_name.di" >> $@ ;\
+			fi                                                                      \
+		done                                                                        \
+	done
+
+-include $(DEPDIR)/rules.mk
 
 bare-ami:
 	./build-ami.sh bare.json
@@ -22,41 +44,46 @@ bare-ami:
 stacked-ami: stacks
 	./build-ami.sh stacked.json
 
-images: $(IMAGE_BUILD_TARGETS) ${BUILD}/10_tag.env
+clean:
+	rm -rf $(BUILD) $(DEPDIR)
 
-${BUILD}/10_tag.env:
+.PHONY: $(IMAGES)
+
+$(IMAGES):
+	docker rmi -f `docker images --filter=reference='conservify/$@' -q` || true
+	cd services/$@ && docker build --rm -t conservify/$@:${TAG} .
+
+$(BUILD)/%.di: NAME = ${@:${BUILD}/%.di=%}
+
+$(BUILD)/%.di:
+	TAG=$(TAG) $(MAKE) $(NAME)
 	mkdir -p $(BUILD)
-	echo "TAG=${TAG}" > $@
+	docker save conservify/$(NAME):$(TAG) > $@
 
-$(IMAGE_BUILD_TARGETS): NAME = ${@:${BUILD}/%.di=%}
-$(IMAGE_BUILD_TARGETS):
-	docker rmi -f `docker images --filter=reference='conservify/${NAME}' -q` || true
-	cd services/$(NAME) && docker build --rm -t conservify/${NAME}:${TAG} .
-	mkdir -p $(BUILD)
-	docker save conservify/${NAME}:${TAG} > $@
+STACK_ARCHIVES := $(STACKS:%=$(BUILD)/%.tar)
 
-$(STACK_BUILD_TARGETS): NAME = ${@:${BUILD}/%.tar=%}
-$(STACK_BUILD_TARGETS): SOURCES = $(abspath stacks/${@:${BUILD}/%.tar=%})
-$(STACK_BUILD_TARGETS): STACK_WORK = ${BUILD}/${@:${BUILD}/%.tar=%}
-$(STACK_BUILD_TARGETS): $(IMAGE_BUILD_TARGETS)
-	mkdir -p ${STACK_WORK}
-	echo ${NAME}: building from ${SOURCES}
-	@for f in ${SOURCES}/*; do                                   \
+stacks: $(STACK_ARCHIVES)
+
+$(STACK_ARCHIVES): SOURCES = $(abspath stacks/$(@:$(BUILD)/%.tar=%))
+$(STACK_ARCHIVES): WORK = $(BUILD)/$(@:$(BUILD)/%.tar=%)
+$(STACK_ARCHIVES): $(BUILD)/10_tag.env
+$(STACK_ARCHIVES):
+	@mkdir -p $(WORK)
+	@echo $@: building from $(SOURCES)
+	@for f in $(SOURCES)/*; do                                   \
 		if [ -d $$f ]; then                                      \
 			name=`basename $$f`                                 ;\
-			echo ${NAME}: including $$name                      ;\
-			ln -sf ${BUILD}/$$name.di ${STACK_WORK}/$$name.di   ;\
+			echo $@: including $$name                           ;\
+			ln -sf ../$$name.di $(WORK)/$$name.di               ;\
 		fi                                                       \
 	done
-	cp ${BUILD}/*.env ${SOURCES}/*.yaml $(STACK_WORK)
-	cd ${STACK_WORK} && tar chf $@ *.env *.yaml *.di
-	rm -rf ${STACK_WORK}
+	cp $(BUILD)/*.env $(SOURCES)/*.yaml $(WORK)
+	cd $(WORK) && tar chf $@ *.env *.yaml *.di
+	rm -rf $(WORK)
 
-clean:
-	rm -rf $(BUILD)
-
-.PHONY: default
-.PHONY: images
+$(BUILD)/10_tag.env:
+	mkdir -p $(BUILD)
+	echo "TAG=${TAG}" > $@
 
 tools: .bin/yq
 
@@ -65,10 +92,10 @@ tools: .bin/yq
 	wget https://github.com/mikefarah/yq/releases/download/3.1.1/yq_linux_amd64 -O .bin/yq
 	chmod 755 .bin/yq
 
-fk-cloud-stack-run: tools images
+fk-cloud-stack-run: tools fk-cloud-stack
 	mkdir -p build
 	.bin/yq d stacks/fk-cloud-stack/docker-compose.yaml "services.*.logging" > build/docker-compose.yaml
 	cp 99_local.env build
 	cat build/*_*.env > build/.env
-	cd build && docker-compose rm -f
-	cd build && docker-compose up || true
+
+.PHONY: default stacks
