--- a/amis/stacks/fk-cloud-stack/docker-compose.yaml
+++ b/amis/stacks/fk-cloud-stack/docker-compose.yaml
@@ -1,6 +1,6 @@
 version: "3.7"
 services:
-  front-envoy:
+  proxy:
     image: "conservify/fk-cloud-proxy:${TAG}"
     networks:
       - envoy-mesh
@@ -18,8 +18,30 @@ services:
         gelf-address: "${GELF_URL}"
         tag: "${GELF_TAGS}"
 
-  fk-cloud-service:
+  fk-ingester:
     image: "conservify/fk-cloud-service:${TAG}"
+    command: [ "/app/ingester" ]
+    networks:
+      - envoy-mesh
+    environment:
+      - FIELDKIT_POSTGRES_URL=${DATABASE_URL}
+      - FIELDKIT_DOMAIN=${ZONE_NAME}
+      - FIELDKIT_PORTAL_ROOT=/app/portal
+      - FIELDKIT_LEGACY_ROOT=/app/legacy
+      - FIELDKIT_EMAILER=aws
+      - FIELDKIT_ARCHIVER=aws
+      - FIELDKIT_PRODUCTION_LOGGING=true
+    expose:
+      - "80"
+    logging:
+      driver: "gelf"
+      options:
+        gelf-address: "${GELF_URL}"
+        tag: "${GELF_TAGS}"
+
+  fk-service:
+    image: "conservify/fk-cloud-service:${TAG}"
+    command: [ "/app/server" ]
     networks:
       - envoy-mesh
     environment:
