Copy user data into our env at startup.

--- a/amis/files/docker-compose@.service
+++ b/amis/files/docker-compose@.service
@@ -8,6 +8,8 @@ Restart=always
 
 WorkingDirectory=/etc/docker/compose/%i
 
+
+ExecStartPre=-/bin/bash -c "cp /etc/user_data.env 99_user_data.env"
 ExecStartPre=-/bin/bash -c "cat *_*.env > .env"
 ExecStart=/usr/bin/docker-compose up
 
