--- a/amis/services/fk-cloud-proxy/envoy-proxy.yaml
+++ b/amis/services/fk-cloud-proxy/envoy-proxy.yaml
@@ -23,6 +23,7 @@ static_resources:
                   prefix: "/"
                 route:
                   cluster: fk-service
+                  timeout: 300s
           http_filters:
           - name: envoy.router
             typed_config: {}
@@ -50,6 +51,7 @@ static_resources:
                   prefix: "/"
                 route:
                   cluster: fk-service
+                  timeout: 300s
           http_filters:
           - name: envoy.router
             typed_config: {}
