--- a/amis/services/fk-cloud-service/service-envoy.yaml
+++ b/amis/services/fk-cloud-service/service-envoy.yaml
@@ -23,6 +23,7 @@ static_resources:
                   prefix: "/"
                 route:
                   cluster: local_service
+                  timeout: 300s
           http_filters:
           - name: envoy.router
             typed_config: {}
