--- a/amis/files/telegraf.conf
+++ b/amis/files/telegraf.conf
@@ -5803,15 +5803,15 @@
 
 
 # # Statsd UDP/TCP Server
-# [[inputs.statsd]]
+[[inputs.statsd]]
 #   ## Protocol, must be "tcp", "udp", "udp4" or "udp6" (default=udp)
-#   protocol = "udp"
+    protocol = "udp"
 #
 #   ## MaxTCPConnection - applicable when protocol is set to tcp (default=250)
-#   max_tcp_connections = 250
+    max_tcp_connections = 250
 #
 #   ## Enable TCP keep alive probes (default=false)
-#   tcp_keep_alive = false
+    tcp_keep_alive = false
 #
 #   ## Specifies the keep-alive period for an active network connection.
 #   ## Only applies to TCP sockets and will be ignored if tcp_keep_alive is false.
@@ -5819,32 +5819,32 @@
 #   # tcp_keep_alive_period = "2h"
 #
 #   ## Address and port to host UDP listener on
-#   service_address = ":8125"
+    service_address = ":8125"
 #
 #   ## The following configuration options control when telegraf clears it's cache
 #   ## of previous values. If set to false, then telegraf will only clear it's
 #   ## cache when the daemon is restarted.
 #   ## Reset gauges every interval (default=true)
-#   delete_gauges = true
+    delete_gauges = true
 #   ## Reset counters every interval (default=true)
-#   delete_counters = true
+    delete_counters = true
 #   ## Reset sets every interval (default=true)
-#   delete_sets = true
+    delete_sets = true
 #   ## Reset timings & histograms every interval (default=true)
-#   delete_timings = true
+    delete_timings = true
 #
 #   ## Percentiles to calculate for timing & histogram stats
-#   percentiles = [50.0, 90.0, 99.0, 99.9, 99.95, 100.0]
+    percentiles = [50.0, 90.0, 99.0, 99.9, 99.95, 100.0]
 #
 #   ## separator to use between elements of a statsd metric
-#   metric_separator = "_"
+    metric_separator = "_"
 #
 #   ## Parses tags in the datadog statsd format
 #   ## http://docs.datadoghq.com/guides/dogstatsd/
-#   parse_data_dog_tags = false
+    parse_data_dog_tags = false
 #
 #   ## Parses datadog extensions to the statsd format
-#   datadog_extensions = false
+    datadog_extensions = false
 #
 #   ## Statsd data translation templates, more info can be read here:
 #   ## https://github.com/influxdata/telegraf/blob/master/docs/TEMPLATE_PATTERN.md
@@ -5854,12 +5854,12 @@
 #
 #   ## Number of UDP messages allowed to queue up, once filled,
 #   ## the statsd server will start dropping packets
-#   allowed_pending_messages = 10000
+    allowed_pending_messages = 10000
 #
 #   ## Number of timing/histogram values to track per-measurement in the
 #   ## calculation of percentiles. Raising this limit increases the accuracy
 #   ## of percentiles but also increases the memory usage and cpu time.
-#   percentile_limit = 1000
+    percentile_limit = 1000
 
 
 # # Suricata stats plugin
