--- a/amis/services/fk-cloud-proxy/envoy-proxy.yaml
+++ b/amis/services/fk-cloud-proxy/envoy-proxy.yaml
@@ -1,3 +1,10 @@
+stats_sinks:
+  - name: envoy.statsd
+    config:
+      address:
+        socket_address:
+          address: 172.17.0.1
+          port_value: 8125
 static_resources:
   listeners:
   - address:
