Targets for changing workspaces.

--- a/terraform/fk/Makefile
+++ b/terraform/fk/Makefile
@@ -1,7 +1,14 @@
 all: terraform.tfplan
 
 plan:
+	terraform workspace list
 	terraform plan -out=terraform.tfplan
+
+dev:
+	terraform workspace select dev
+
+prod:
+	terraform workspace select prod
 
 apply: terraform.tfplan
 	terraform apply
