Ensure initialize in Makefile.

--- a/terraform/Makefile
+++ b/terraform/Makefile
@@ -1,38 +1,27 @@
-all: terraform.tfplan
+all: plan
 
-plan: build/fk_cron_every_five.zip
-	terraform workspace list
-	terraform plan -out=terraform.tfplan
-
-dev:
+dev: .terraform
 	terraform workspace select dev
 
-prod:
+prod: .terraform
 	terraform workspace select prod
+
+plan: .terraform build/fk_cron_every_five.zip
+	terraform workspace list
+	terraform plan -out=terraform.tfplan
 
 apply: terraform.tfplan
 	terraform apply
 	@terraform output > deployed.json
 
-terraform.tfplan:
-	terraform get
-	terraform plan -out=terraform.tfplan
+.terraform:
+	terraform init
 
 build/fk_cron_every_five.zip: fk_cron_every_five.py
 	mkdir -p build
 	zip -o $@ $^ && touch $@
 
-setup: ~/.terraformrc
-	terraform init
-
-vars:
-	terraform output > deployed.json
-
-graph:
-	@rm -f graph.png
-	@terraform graph -draw-cycles -module-depth=-1 | dot -Tpng > graph.png
-
 clean:
-	rm -f terraform.tfplan graph.png
+	rm -f terraform.tfplan build
 
 .PHONY: all apply clean
