--- a/amis/files/40-graylog.conf
+++ b/amis/files/40-graylog.conf
@@ -1,7 +1,8 @@
-$WorkDirectory /var/spool/rsyslog
-$ActionQueueType LinkedList # use asynchronous processing
-$ActionQueueFileName srvrfwd # set file name, also enables disk mode
-$ActionResumeRetryCount -1 # infinite retries on insert failure
-$ActionQueueSaveOnShutdown on # save in-memory data if rsyslog shuts down
+# $WorkDirectory /var/spool/rsyslog
+# $ActionQueueType LinkedList     # use asynchronous processing
+# $ActionQueueFileName srvrfwd    # set file name, also enables disk mode
+# $ActionResumeRetryCount -1      # infinite retries on insert failure
+# $ActionQueueSaveOnShutdown on # save in-memory data if rsyslog shuts down
 
-*.* @@(o)logs.fk.private:6140;RSYSLOG_SyslogProtocol23Format
+# disabled in favor of filebeat.
+# *.* @@(o)logs.fk.private:6140;RSYSLOG_SyslogProtocol23Format
