Use system module.

--- a/amis/files/filebeat.yml
+++ b/amis/files/filebeat.yml
@@ -4,7 +4,7 @@ logging.metrics.enabled: false
 
 filebeat.inputs:
 - type: log
-  enabled: true
+  enabled: false
   paths:
     - /var/log/syslog
 
