--- a/amis/stacks/fk-cloud-stack/docker-compose.yaml
+++ b/amis/stacks/fk-cloud-stack/docker-compose.yaml
@@ -24,6 +24,10 @@ services:
     networks:
       - envoy-mesh
     environment:
+      - TAG=${TAG}
+      - HOSTNAME=${HOSTNAME}
+      - FIELDKIT_TAG=${TAG}
+      - FIELDKIT_SERVER_NAME=${HOSTNAME}
       - FIELDKIT_POSTGRES_URL=${DATABASE_URL}
       - FIELDKIT_DOMAIN=${ZONE_NAME}
       - FIELDKIT_PORTAL_ROOT=/app/portal
@@ -46,6 +50,10 @@ services:
     networks:
       - envoy-mesh
     environment:
+      - TAG=${TAG}
+      - HOSTNAME=${HOSTNAME}
+      - FIELDKIT_TAG=${TAG}
+      - FIELDKIT_SERVER_NAME=${HOSTNAME}
       - FIELDKIT_POSTGRES_URL=${DATABASE_URL}
       - FIELDKIT_DOMAIN=${ZONE_NAME}
       - FIELDKIT_PORTAL_ROOT=/app/portal
