Pass plain PRODUCTION flag.

--- a/amis/stacks/fk-cloud-stack/docker-compose.yaml
+++ b/amis/stacks/fk-cloud-stack/docker-compose.yaml
@@ -35,6 +35,7 @@ services:
       - FIELDKIT_EMAILER=aws
       - FIELDKIT_ARCHIVER=aws
       - FIELDKIT_PRODUCTION_LOGGING=true
+      - FIELDKIT_PRODUCTION=true
       - FIELDKIT_STATSD_ADDRESS=172.17.0.1:8125
       - FIELDKIT_BUCKET_NAME=${STREAMS_BUCKET_NAME}
     expose:
@@ -62,6 +63,7 @@ services:
       - FIELDKIT_EMAILER=aws
       - FIELDKIT_ARCHIVER=aws
       - FIELDKIT_PRODUCTION_LOGGING=true
+      - FIELDKIT_PRODUCTION=true
       - FIELDKIT_STATSD_ADDRESS=172.17.0.1:8125
       - FIELDKIT_BUCKET_NAME=${STREAMS_BUCKET_NAME}
     expose:
