Email override and some other logging variables.

--- a/amis/stacks/fk-cloud-stack/docker-compose.yaml
+++ b/amis/stacks/fk-cloud-stack/docker-compose.yaml
@@ -34,8 +34,9 @@ services:
       - FIELDKIT_LEGACY_ROOT=/app/legacy
       - FIELDKIT_EMAILER=aws
       - FIELDKIT_ARCHIVER=aws
-      - FIELDKIT_PRODUCTION_LOGGING=true
-      - FIELDKIT_PRODUCTION=true
+      - FIELDKIT_EMAIL_OVERRIDE=${EMAIL_OVERRIDE}
+      - FIELDKIT_PRODUCTION=${PRODUCTION}
+      - FIELDKIT_LOGGING_FULL=true
       - FIELDKIT_STATSD_ADDRESS=172.17.0.1:8125
       - FIELDKIT_BUCKET_NAME=${STREAMS_BUCKET_NAME}
     expose:
@@ -62,8 +63,9 @@ services:
       - FIELDKIT_LEGACY_ROOT=/app/legacy
       - FIELDKIT_EMAILER=aws
       - FIELDKIT_ARCHIVER=aws
-      - FIELDKIT_PRODUCTION_LOGGING=true
-      - FIELDKIT_PRODUCTION=true
+      - FIELDKIT_EMAIL_OVERRIDE=${EMAIL_OVERRIDE}
+      - FIELDKIT_PRODUCTION=${PRODUCTION}
+      - FIELDKIT_LOGGING_FULL=true
       - FIELDKIT_STATSD_ADDRESS=172.17.0.1:8125
       - FIELDKIT_BUCKET_NAME=${STREAMS_BUCKET_NAME}
     expose:
