--- a/amis/stacks/fk-cloud-stack/docker-compose.yaml
+++ b/amis/stacks/fk-cloud-stack/docker-compose.yaml
@@ -39,6 +39,7 @@ services:
       - FIELDKIT_LOGGING_FULL=true
       - FIELDKIT_STATSD_ADDRESS=172.17.0.1:8125
       - FIELDKIT_BUCKET_NAME=${STREAMS_BUCKET_NAME}
+      - FIELDKIT_SESSION_KEY=${SESSION_KEY}
     expose:
       - "8000"
     logging:
@@ -68,6 +69,7 @@ services:
       - FIELDKIT_LOGGING_FULL=true
       - FIELDKIT_STATSD_ADDRESS=172.17.0.1:8125
       - FIELDKIT_BUCKET_NAME=${STREAMS_BUCKET_NAME}
+      - FIELDKIT_SESSION_KEY=${SESSION_KEY}
     expose:
       - "8000"
     logging:
