New bucket name configuration, passing both bucket names in.

--- a/amis/stacks/fk-cloud-stack/docker-compose.yaml
+++ b/amis/stacks/fk-cloud-stack/docker-compose.yaml
@@ -38,7 +38,8 @@ services:
       - FIELDKIT_PRODUCTION=${PRODUCTION}
       - FIELDKIT_LOGGING_FULL=true
       - FIELDKIT_STATSD_ADDRESS=172.17.0.1:8125
-      - FIELDKIT_BUCKET_NAME=${STREAMS_BUCKET_NAME}
+      - FIELDKIT_MEDIA_BUCKET_NAME=${MEDIA_BUCKET_NAME}
+      - FIELDKIT_STREAMS_BUCKET_NAME=${STREAMS_BUCKET_NAME}
       - FIELDKIT_SESSION_KEY=${SESSION_KEY}
     expose:
       - "8000"
@@ -68,7 +69,7 @@ services:
       - FIELDKIT_PRODUCTION=${PRODUCTION}
       - FIELDKIT_LOGGING_FULL=true
       - FIELDKIT_STATSD_ADDRESS=172.17.0.1:8125
-      - FIELDKIT_BUCKET_NAME=${STREAMS_BUCKET_NAME}
+      - FIELDKIT_STREAMS_BUCKET_NAME=${STREAMS_BUCKET_NAME}
       - FIELDKIT_SESSION_KEY=${SESSION_KEY}
     expose:
       - "8000"
