Add module files to container during build.

--- a/docker/diagnostics/Dockerfile
+++ b/docker/diagnostics/Dockerfile
@@ -4,7 +4,7 @@ RUN mkdir -p /data /app
 
 WORKDIR /app
 
-ADD main.go /app
+ADD go.* main.go /app/
 RUN go build -o diagnostics *.go
 
 ENTRYPOINT [ "/app/diagnostics", "--strip", "1", "--path", "/data" ]
