Fix docker image build.

--- a/docker/diagnostics/Makefile
+++ b/docker/diagnostics/Makefile
@@ -1,6 +1,8 @@
-default:
-	mkdir -p public
-	webpack --mode production
+docker-image:
+	docker build -t temp .
+
+docker-test: docker-image
+	docker run --rm -p 8080:8080 temp
 
 test:
 	webpack-dev-server
