--- a/docker/diagnostics/package.json
+++ b/docker/diagnostics/package.json
@@ -21,6 +21,7 @@
         "babel-loader": "^8.0.6",
         "babel-preset-es2015": "^6.24.1",
         "css-loader": "^3.4.1",
+        "html-webpack-plugin": "^3.2.0",
         "ts-loader": "^6.2.1",
         "typescript": "^3.7.4",
         "vue-loader": "^15.8.3",
