--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -35,7 +35,7 @@ services:
     volumes:
       - /svr0/distribution:/var/lib/distribution
       - /svr0/glacier:/var/lib/glacier-data
-      - /svr0/web/code.conservify.org:/var/www/conservify.org
+      - /svr0/web/conservify.org:/var/www/conservify.org
     links:
       - jenkins
       - logs
