Add mapbox token to the per env config, pass down to stack.

--- a/amis/stacks/fk-cloud-stack/docker-compose.yaml
+++ b/amis/stacks/fk-cloud-stack/docker-compose.yaml
@@ -72,6 +72,7 @@ services:
       - FIELDKIT_MEDIA_BUCKET_NAME=${MEDIA_BUCKET_NAME}
       - FIELDKIT_STREAMS_BUCKET_NAME=${STREAMS_BUCKET_NAME}
       - FIELDKIT_SESSION_KEY=${SESSION_KEY}
+      - FIELDKIT_MAPBOX_TOKEN=${MAPBOX_TOKEN}
     expose:
       - "8000"
     logging:
