--- a/docker/jenkins/server/Dockerfile
+++ b/docker/jenkins/server/Dockerfile
@@ -7,5 +7,6 @@ WORKDIR /tmp
 ADD lief-0.10.0.dev0-py3.6-linux-x86_64.egg /tmp
 RUN python3 -m easy_install --no-deps lief-0.10.0.dev0-py3.6-linux-x86_64.egg
 RUN wget https://nodejs.org/dist/v12.18.1/node-v12.18.1-linux-x64.tar.xz && tar -C /usr/local -xf node-v12.18.1-linux-x64.tar.xz && mv /usr/local/node-* /usr/local/node
+RUN PATH=$PATH:/usr/local/node/bin npm install -g yarn && ls -alh /usr/local/node/bin
 RUN wget https://download.docker.com/linux/static/stable/x86_64/docker-17.09.0-ce.tgz && tar -C /usr/local -xf docker-17.09.0-ce.tgz
 USER jenkins
